versioned_docs/version-2.16/reference/subsystems/buf.mdx
---
title: buf
description: |
  A linter and formatter for Protocol Buffers (https://github.com/bufbuild/buf).
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

A linter and formatter for Protocol Buffers (https://github.com/bufbuild/buf).

Backend: <span className="color--primary">`pants.backend.codegen.protobuf.lint.buf`</span>

Config section: <span className="color--primary">`[buf]`</span>

<span className={styles.options}>

## Basic options

### `format_args`

<Option
  cli_repr={`--buf-format-args="[<shell_str>, <shell_str>, ...]"`}
  env_repr='PANTS_BUF_FORMAT_ARGS'
  toml_repr={`[buf]
format_args = [
    <shell_str>,
    <shell_str>,
    ...,
]`}
  default_repr={`[]`}
>

Arguments to pass directly to Buf, e.g. `--buf-args='--error-format json'`.

</Option>

### `format_skip`

<Option
  cli_repr={`--[no-]buf-format-skip`}
  env_repr='PANTS_BUF_FORMAT_SKIP'
  toml_repr={`[buf]
format_skip = <bool>`}
  default_repr={`False`}
>

If true, don&#x27;t use Buf when running `pants fmt` and `pants lint`.

</Option>

### `lint_args`

<Option
  cli_repr={`--buf-lint-args="[<shell_str>, <shell_str>, ...]"`}
  env_repr='PANTS_BUF_LINT_ARGS'
  toml_repr={`[buf]
lint_args = [
    <shell_str>,
    <shell_str>,
    ...,
]`}
  default_repr={`[]`}
>

Arguments to pass directly to Buf, e.g. `--buf-args='--error-format json'`.

</Option>

### `lint_skip`

<Option
  cli_repr={`--[no-]buf-lint-skip`}
  env_repr='PANTS_BUF_LINT_SKIP'
  toml_repr={`[buf]
lint_skip = <bool>`}
  default_repr={`False`}
>

If true, don&#x27;t use Buf when running `pants lint`.

</Option>

## Advanced options

### `config`

<Option
  cli_repr={`--buf-config=<file_option>`}
  env_repr='PANTS_BUF_CONFIG'
  toml_repr={`[buf]
config = <file_option>`}
  default_repr={`None`}
>

Path to a config file understood by Buf (https://docs.buf.build/configuration/overview).

Setting this option will disable `[buf].config_discovery`. Use this option if the config is located in a non-standard location.

</Option>

### `config_discovery`

<Option
  cli_repr={`--[no-]buf-config-discovery`}
  env_repr='PANTS_BUF_CONFIG_DISCOVERY'
  toml_repr={`[buf]
config_discovery = <bool>`}
  default_repr={`True`}
>

If true, Pants will include any relevant root config files during runs (`buf.yaml`, `buf.lock`, `buf.gen.yaml` and `buf.work.yaml`).

Use `[buf].config` instead if your config is in a non-standard location.

</Option>

### `known_versions`

<Option
  cli_repr={`--buf-known-versions="['<str>', '<str>', ...]"`}
  env_repr='PANTS_BUF_KNOWN_VERSIONS'
  toml_repr={`[buf]
known_versions = [
    '<str>',
    '<str>',
    ...,
]`}
  default_repr={`[\n  "v1.3.0|linux_arm64 |fbfd53c501451b36900247734bfa4cbe86ae05d0f51bc298de8711d5ee374ee5|13940828",\n  "v1.3.0|linux_x86_64|e29c4283b1cd68ada41fa493171c41d7605750d258fcd6ecdf692a63fae95213|15267162",\n  "v1.3.0|macos_arm64 |147985d7f2816a545792e38b26178ff4027bf16cd3712f6e387a4e3692a16deb|15391890",\n  "v1.3.0|macos_x86_64|3b6bd2e5a5dd758178aee01fb067261baf5d31bfebe93336915bfdf7b21928c4|15955291"\n]`}
>

Known versions to verify downloads against.

Each element is a pipe-separated string of `version|platform|sha256|length`, where:

```
- `version` is the version string
- `platform` is one of [linux_arm64,linux_x86_64,macos_arm64,macos_x86_64],
- `sha256` is the 64-character hex representation of the expected sha256
digest of the download file, as emitted by `shasum -a 256`
- `length` is the expected length of the download file in bytes, as emitted by
`wc -c`
```

E.g., `3.1.2|macos_x86_64|6d0f18cd84b918c7b3edd0203e75569e0c7caecb1367bbbe409b44e28514f5be|42813`.

Values are space-stripped, so pipes can be indented for readability if necessary.

</Option>

### `url_platform_mapping`

<Option
  cli_repr={`--buf-url-platform-mapping="{'key1': val1, 'key2': val2, ...}"`}
  env_repr='PANTS_BUF_URL_PLATFORM_MAPPING'
  toml_repr={`[buf.url_platform_mapping]
key1 = val1
key2 = val2
...`}
  default_repr={`{\n  "linux_arm64": "Linux-aarch64",\n  "linux_x86_64": "Linux-x86_64",\n  "macos_arm64": "Darwin-arm64",\n  "macos_x86_64": "Darwin-x86_64"\n}`}
>

A dictionary mapping platforms to strings to be used when generating the URL to download the tool.

In --url-template, anytime the `{platform}` string is used, Pants will determine the current platform, and substitute `{platform}` with the respective value from your dictionary.

For example, if you define `{"macos_x86_64": "apple-darwin", "linux_x86_64": "unknown-linux"}`, and run Pants on Linux with an intel architecture, then `{platform}` will be substituted in the --url-template option with unknown-linux.

</Option>

### `url_template`

<Option
  cli_repr={`--buf-url-template=<str>`}
  env_repr='PANTS_BUF_URL_TEMPLATE'
  toml_repr={`[buf]
url_template = <str>`}
  default_repr={`https://github.com/bufbuild/buf/releases/download/{version}/buf-{platform}.tar.gz`}
>

URL to download the tool, either as a single binary file or a compressed file (e.g. zip file). You can change this to point to your own hosted file, e.g. to work with proxies or for access via the filesystem through a `file:$abspath` URL (e.g. `file:/this/is/absolute`, possibly by [templating the buildroot in a config file](https://www.pantsbuild.org/v2.16/docs/options#config-file-entries)).

Use `{version}` to have the value from --version substituted, and `{platform}` to have a value from --url-platform-mapping substituted in, depending on the current platform. For example, https://github.com/.../protoc-&#123;version&#125;-&#123;platform&#125;.zip.

</Option>

### `use_unsupported_version`

<Option
  cli_repr={`--buf-use-unsupported-version=<UnsupportedVersionUsage>`}
  env_repr='PANTS_BUF_USE_UNSUPPORTED_VERSION'
  toml_repr={`[buf]
use_unsupported_version = <UnsupportedVersionUsage>`}
  one_of='error, warning'
  default_repr={`error`}
>

What action to take in case the requested version of Buf is not supported.

Supported Buf versions: unspecified

</Option>

### `version`

<Option
  cli_repr={`--buf-version=<str>`}
  env_repr='PANTS_BUF_VERSION'
  toml_repr={`[buf]
version = <str>`}
  default_repr={`v1.3.0`}
>

Use this version of Buf.

</Option>

## Deprecated options

None

## Related subsystems

None

</span>
